fix: change the overflow attribute in ProviderInfo to hidden

--- a/client/src/components/AvgScores.css
+++ b/client/src/components/AvgScores.css
@@ -1,6 +1,6 @@
 .scores-card {
   border-radius: 10px;
-  padding-top: 10px;
+  margin: 20px;
   padding-left: 10px;
   align-items: center;
   justify-content: center;
@@ -15,10 +15,11 @@
 
 .overall {
   font-size: 26px;
+  padding-top: 20px;
 }
 
 .overall-score {
-  font-size: 15px;
+  font-size: 45px;
 }
 
 .red {
