--- a/client/src/components/ProviderInfo.css
+++ b/client/src/components/ProviderInfo.css
@@ -7,7 +7,7 @@ body {
 .provider-hero-div {
   font-weight: 600;
   display: flex;
-  overflow:auto;
+  overflow: hidden;
   justify-content: space-evenly;
   width: 100%;
   height: 300px;
